--- a/student-risk-system/requirements.txt
+++ b/student-risk-system/requirements.txt
@@ -1,9 +1,7 @@
-pandas
-numpy
-joblib
-streamlit
-scikit-learn 
-openai>=1.13.3
-python-dotenv>=1.0.1
-tenacity>=8.2.3
-reportlab>=3.10.0
+streamlit==1.38.0
+pandas==2.2.2
+numpy==2.1.1
+scikit-learn==1.5.2
+scipy==1.14.1
+joblib==1.4.2
+reportlab==4.4.4
